objects/Order.object
<CustomObject>
    <fields>
        <fullName>HW_Program_Number__c</fullName>
        <label>HW Program Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_1st_AC_Entered_In_Service_Date__c</fullName>
        <label>1st AC Entered In Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_1st_Aircraft_Entered_In_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1st Aircraft Entered In Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_1st_Recurring_MMA_Freeze_Date__c</fullName>
        <label>1st Recurring MMA Freeze Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_Account_Owner_is_me__c</fullName>
        <formula>Account.OwnerId = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner is me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Airline_IATA__c</fullName>
        <formula>Opportunity.L2I_AC_Operator__r.L2I_Operator_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Airline Pac IATA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Airline_ICAO__c</fullName>
        <formula>Opportunity.L2I_AC_Operator__r.L2I_Airline_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Airline ICAO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Airline_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Airline Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_AutoActivate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AutoActivate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Blanket_PO_Available__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Blanket PO Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Current_PO_Expiration_Date__c</fullName>
        <label>Current PO Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_DSS_PO_Case_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator used to Validate Closure of the related Aircraft Order Case</description>
        <label>DSS PO Case Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Delivery_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Schedule</label>
        <referenceTo>L2I_DSH__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_ExtOracleOrderID__c</fullName>
        <externalId>true</externalId>
        <label>ExtOracleOrderID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Feature_ID__c</fullName>
        <label>Feature ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Feature_Name__c</fullName>
        <label>Feature Name</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Header_ExternalId__c</fullName>
        <label>Header ExternalId</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_IntegrationMessage__c</fullName>
        <label>IntegrationMessage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_IntegrationStatus__c</fullName>
        <label>IntegrationStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2I_IntegrationStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Media_Frequency__c</fullName>
        <label>Media Frequency</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Oracle_Order_Number__c</fullName>
        <label>Oracle Order Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_OrderActivationAlert__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Activation Alert</label>
        <referenceTo>L2I_System_Alert__c</referenceTo>
        <relationshipLabel>Orders (Order Activation Alert)</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_Order_Process__c</fullName>
        <label>Order Process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2I_Order_Process</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Original_Sales_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Sales Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_PO_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PO Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Product_Category_2__c</fullName>
        <label>Product Category 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Program_Number__c</fullName>
        <inlineHelpText>This is for Media Products Only</inlineHelpText>
        <label>Program Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Related_Oracle_HW_Program_numbers__c</fullName>
        <formula>Opportunity.L2I_Related_Oracle_HW_Program_numbers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Oracle HW Program numbers</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Revise_Modified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revise Modified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_SCM_Release_Date_Captured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SCM Release Date Captured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_SCM_Release_Date__c</fullName>
        <label>SCM Release Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2I_Service_Activation_Types__c</fullName>
        <label>Service Activation Types</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Shadow_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship to related &quot;shadow&quot; Order used for custom invoicing</description>
        <inlineHelpText>Related Order used for custom invoicing</inlineHelpText>
        <label>Shadow Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Shadow Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_SourceOrder_Id__c</fullName>
        <description>Id used to manage the creation of &quot;shadow&quot; orders</description>
        <externalId>true</externalId>
        <inlineHelpText>Id used to manage the creation of &quot;shadow&quot; orders</inlineHelpText>
        <label>L2I_SourceOrder_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Split_Ops__c</fullName>
        <label>L2I Split Ops</label>
        <summaryFilterItems>
            <field>OrderItem.Id</field>
            <operation>equals</operation>
            <value>PA-CPSPERMB-YYYY</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2I_Suggested_Order_Start_Date__c</fullName>
        <formula>IF(L2I_Media_Frequency__c = &quot;Monthly (12)&quot;, L2I_1st_Recurring_MMA_Freeze_Date__c - 30,
IF(L2I_Media_Frequency__c = &quot;Bi-Monthly (6)&quot;, L2I_1st_Recurring_MMA_Freeze_Date__c - 60,
IF(L2I_Media_Frequency__c = &quot;Quarterly (4)&quot;, L2I_1st_Recurring_MMA_Freeze_Date__c - 90,
IF(L2I_Media_Frequency__c = &quot;Tri-Annually (3)&quot;, L2I_1st_Recurring_MMA_Freeze_Date__c - 120,
IF(L2I_Media_Frequency__c = &quot;Semi-Annual (2)&quot;, L2I_1st_Recurring_MMA_Freeze_Date__c - 180,
IF(L2I_Media_Frequency__c = &quot;Annually (1)&quot;, L2I_1st_Recurring_MMA_Freeze_Date__c - 365,
null
))))))</formula>
        <label>Suggested Order Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_Terminated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Terminated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PT_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Ext_Hold_Status__c</fullName>
        <label>Ext Hold Status</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PT_Ext_Order_Header_Status__c</fullName>
        <label>Ext Order Header Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Header_External_Id__c</fullName>
        <label>Header External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Integration_Message__c</fullName>
        <label>Integration Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PT_Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2I_IntegrationStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_Oracle_Order_Number__c</fullName>
        <label>Oracle Order Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_User_Oracle_Id__c</fullName>
        <description>Need to access custom field for Owner on User object</description>
        <formula>Owner:User.L2I_Oracle_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Oracle Id</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>L2I_IntegrationStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>